Inserccion de Footer

--- a/empresa.html
+++ b/empresa.html
@@ -8,6 +8,7 @@
     <title>ALPHA IMPORT</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="icon" href="assets/among_us_player_red_icon_156942.ico">
+    <script src="https://kit.fontawesome.com/9dc3b94eab.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="header">
@@ -57,6 +58,44 @@
             <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum qui libero nihil odit dolor mollitia numquam! Est numquam quas maiores ducimus doloribus, facere, modi incidunt veritatis perferendis, sit molestias expedita?</td>
         </tr>
     </table>
+    </div>
+    <div class="container">
+        <footer class="foot">
+            <div class="column c1">
+                <img src="https://img.freepik.com/vector-gratis/empresa-especializada-productos-extranjeros-importacion-bienes-servicios-servicios-importacion-bienes-concepto-proceso-ventas-internacionales-ilustracion-aislada-bluevector-coral-rosado_335657-1793.jpg?w=2000" alt="import" class="logito">
+                <div class="subtittles">
+                    <h2>ALPHA IMPORT</h2>
+                    <h4>Importaciones</h4>
+                </div>
+            </div>
+            <div class="column c2">
+                <h3 class="sub-tittle">Sobre Nosotros</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus sint distinctio blanditiis dicta iste, aut ullam explicabo rerum incidunt. Eaque, minus. Accusamus perferendis delectus quos earum! Placeat, eaque ut? Dignissimos.</p>
+            </div>
+            <div class="column c3">
+                <h3 class="sub-tittle">Siguenos</h3>
+                <div class="redes">
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-facebook icon"></i></a>
+                    </div>
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-twitter icon"></i></a>
+                    </div>
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-instagram-square icon"></i></a>
+                    </div>
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-google-plus icon"></i></a>
+                    </div>
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-pinterest icon"></i></a>
+                    </div>
+                </div>                    
+            </div>
+            <div class="last">
+                <p>@2022 Derechos Reservados por <a href="https://eva.idat.edu.pe/" class="enlace">Idat</a></p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>     
