--- a/ubicacion.html
+++ b/ubicacion.html
@@ -8,6 +8,7 @@
     <title>ALPHA IMPORT</title>
     <link rel="stylesheet" href="assets/normalize.css">
     <link rel="icon" href="assets/among_us_player_red_icon_156942.ico">
+    <script src="https://kit.fontawesome.com/9dc3b94eab.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="header">
@@ -50,6 +51,44 @@
     <center>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d249621.97513892275!2d-77.12152648271481!3d-12.1570107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b845cbd91fed%3A0xc2bf16cf253eacb1!2sIdat%20-%20San%20Juan%20de%20Miraflores!5e0!3m2!1ses!2spe!4v1652810479420!5m2!1ses!2spe" width="70%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </center>
+    </div>
+    <div class="container">
+        <footer class="foot">
+            <div class="column c1">
+                <img src="https://img.freepik.com/vector-gratis/empresa-especializada-productos-extranjeros-importacion-bienes-servicios-servicios-importacion-bienes-concepto-proceso-ventas-internacionales-ilustracion-aislada-bluevector-coral-rosado_335657-1793.jpg?w=2000" alt="import" class="logito">
+                <div class="subtittles">
+                    <h2>ALPHA IMPORT</h2>
+                    <h4>Importaciones</h4>
+                </div>
+            </div>
+            <div class="column c2">
+                <h3 class="sub-tittle">Sobre Nosotros</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus sint distinctio blanditiis dicta iste, aut ullam explicabo rerum incidunt. Eaque, minus. Accusamus perferendis delectus quos earum! Placeat, eaque ut? Dignissimos.</p>
+            </div>
+            <div class="column c3">
+                <h3 class="sub-tittle">Siguenos</h3>
+                <div class="redes">
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-facebook icon"></i></a>
+                    </div>
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-twitter icon"></i></a>
+                    </div>
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-instagram-square icon"></i></a>
+                    </div>
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-google-plus icon"></i></a>
+                    </div>
+                    <div class="row">
+                        <a href=""><i class="fa-brands fa-pinterest icon"></i></a>
+                    </div>
+                </div>                    
+            </div>
+            <div class="last">
+                <p>@2022 Derechos Reservados por <a href="https://eva.idat.edu.pe/" class="enlace">Idat</a></p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>     
