Se cambio la imagen de comentarios

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h3 class="sub-tittle">Equipo</h3>
             <p>Giancarlo Estela Ventura<br>
                 Adrian Celis Torres<br>
-                Jeremy Ayza Matias<br>
+                Airon Javier Carranza<br>
                 Carlos Chumpitaz Linares
             </p>
         </div>
