--- a/Registrese.html
+++ b/Registrese.html
@@ -96,7 +96,7 @@
             <h3 class="sub-tittle">Equipo</h3>
             <p>Giancarlo Estela Ventura<br>
                 Adrian Celis Torres<br>
-                Jeremy Ayza Matias<br>
+                Airon Javier Carranza<br>
                 Carlos Chumpitaz Linares
             </p>
         </div>
