--- a/Registrese.html
+++ b/Registrese.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="header">
-        <h1 class="titulo">ALPHA IMPORT</h1>
+        <h1 class="titulo">LATIN IMPORT</h1>
         <h3>Soluciones Informaticas</h3>
     </div>
     <hr size="5px" color="orange">
