--- a/comentarios.html
+++ b/comentarios.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="titulo">ALPHA IMPORT</h1>
+        <h1 class="titulo">LATIN IMPORT</h1>
         <h3>Soluciones Informaticas</h3>
     </div>
     <hr size="5px" color="orange"><!--#0FF00 Hexadecimal:0123456789ABCDEF-->
