--- a/contactenos.html
+++ b/contactenos.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="titulo">ALPHA IMPORT</h1>
+        <h1 class="titulo">LATIN IMPORT</h1>
         <h3>Soluciones Informaticas</h3>
     </div>
     <hr size="5px" color="orange"><!--#0FF00 Hexadecimal:0123456789ABCDEF-->
@@ -51,7 +51,7 @@
                 </div>
                 <div class="container--content--form">
                     <form action="" class="form" method="post">
-                        <span>Nombres:</span> <br>
+                        <label>Nombres:</label> <br>
                         <input class="inputs--form" type="text" required><br>
                         <span>Telefono:</span> <br>
                         <input class="inputs--form" type="number" required> <br>
@@ -59,7 +59,7 @@
                         <input class="inputs--form" type="email" required> <br>
                         <span>comentario:</span> <br>
                         <textarea class="inputs--form" name="" id="" cols="30" rows="8" required></textarea><br>
-                        <input type="submit" value="Enviar">
+                        <input type="submit" value="Enviar" class="btn">
                         
                     </form>
                 </div>
