--- a/empresa.html
+++ b/empresa.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="header">
-        <h1 class="titulo">ALPHA IMPORT</h1>
+        <h1 class="titulo">LATIN IMPORT</h1>
         <h3>Soluciones Informaticas</h3>
     </div>
     <hr size="5px" color="orange" />
@@ -37,7 +37,7 @@
                 <a href="comentarios.html">Comentarios</a>
             </li>
             <li class="item--nav">
-                <a href="registrese.html">Registrece</a>
+                <a href="registrese.html">Registrese</a>
             </li>
         </ul>
     </div>
